--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -1,8 +1,10 @@
 .NavBar {
+    position: fixed;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: red;
+    background-color: #ff0000;
+    width: 100%;
 }
 
 .NavBar button {
@@ -20,3 +22,4 @@
     display: flex;
     justify-content: space-between;
 }
+
