--- a/frontend/src/components/app.css
+++ b/frontend/src/components/app.css
@@ -1,6 +1,11 @@
 body {
   background-color: black;
   color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.page-content{
+  padding-top: 35px;
 }
 
 .root{
