--- a/frontend/src/components/main/main_page.css
+++ b/frontend/src/components/main/main_page.css
@@ -1,10 +1,10 @@
 .splash-title {
   width: 100%;
-  height: 885px;
+  height: 45vw;
 }
 
 .splash-container {
-  box-shadow: inset 0 -100px 80px 50px #000000;
+  box-shadow: inset 0 -3vw 80px 50px #000000;
   background-image: url('https://www.howtogeek.com/wp-content/uploads/2021/03/person-holding-a-sony-playstation-5-dualsense-controller.jpeg?height=200p');
   background-size: 100%;
   background-repeat: no-repeat;
@@ -14,5 +14,5 @@
 
 .splash-container h1{
   /* position: absolute; */
-  
+
 }
