--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -1,38 +1,30 @@
 .NavBar {
-    position: fixed;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: rgb(61, 61, 61);
-    height: 40px;
-    width: 100%;
-    box-shadow: 0 3px 3px #333;
-    padding-right: 20px;
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: rgb(61, 61, 61);
+  height: 40px;
+  width: 100%;
+  box-shadow: 0 3px 3px #333;
+  padding-right: 20px;
 }
 
 .NavBar button {
-    height: 20px;
+  height: 20px;
 }
 
 .NavBar a {
   padding: 2px 20px;
-  margin: 0 20px;
+  margin: 0 max(0.4vw, 25px);
   color: white;
   text-decoration: none;
   border-radius: 5px;
   background-color: black;
-  transition: 0.6s;
+  transition: 0.3s;
 }
 
 .NavBar a:hover{
   background-color: rgb(109, 109, 109);
 }
-
-/* .Links1 {
-    width: 100px;
-}
-
-.Links2 {
-    width: 400px;
-} */
