--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -7,7 +7,7 @@
   background-color: rgb(61, 61, 61);
   height: 40px;
   width: 100%;
-  box-shadow: 0 3px 3px #333;
+  box-shadow: 0 1px 40px 3px rgb(14, 14, 14);
   padding-right: 20px;
 }
 
