Render game genre index

--- a/frontend/src/components/app.css
+++ b/frontend/src/components/app.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-color: rgb(12, 12, 12);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
