Change gameseeds and edit styling

--- a/frontend/src/components/recommender/genres_index.css
+++ b/frontend/src/components/recommender/genres_index.css
@@ -14,6 +14,11 @@
   top: 48px;
   text-align: center;
   font-family: 'Rajdhani', sans-serif;
+  animation: fadeIn 1.2s;
+  -webkit-animation: fadeIn 1.2s;
+  -moz-animation: fadeIn 1.2s;
+  -o-animation: fadeIn 1.2s;
+  -ms-animation: fadeIn 1.2s;
 }
 
 .genres-container{ 
@@ -25,13 +30,18 @@
   position: relative;
   margin: auto;
   width: 92%;
+  animation: fadeIn 1.2s;
+  -webkit-animation: fadeIn 1.2s;
+  -moz-animation: fadeIn 1.2s;
+  -o-animation: fadeIn 1.2s;
+  -ms-animation: fadeIn 1.2s;
   /* display: grid; */
   /* margin-top: 100px; */
 }  
 
 .genre-item{
   cursor: pointer;
-  outline: 3.5px solid rgb(74, 71, 82);
+  outline: 1.8px solid rgb(54, 54, 56);
   box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
   outline-offset: -3.5px;
   position: relative;
@@ -39,7 +49,7 @@
   height: 25.5vh;
   border-radius: 12px;
   overflow: hidden;
-  background: linear-gradient(rgba(17, 17, 19, 0.6), rgb(10, 10, 0.6));
+  background: linear-gradient(rgba(17, 17, 19, 0.445), rgba(10, 10, 1, 0.801));
   transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
   /* text-align: center; */
   font-family: 'Rajdhani', sans-serif;
@@ -58,6 +68,7 @@
   cursor: pointer;
   overflow:hidden;
   color: rgba(214, 214, 214, 0.308);
+  outline: 1.9px solid rgb(224, 224, 224);
 }
 
 #Racing:hover {
@@ -171,10 +182,35 @@
 
 .games-per-genre {
   font-size: 30px;
-  top: 35px;
+  top: 23px;
   position: relative;
   margin: auto;
-  width: 97%;
+  width: 98%;
+}
+
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
 }
 
 .genre-game {
@@ -188,7 +224,6 @@
 }
 
 .genre-game:hover {
-  cursor:pointer;
   transform: scale(1.08);
   opacity: 1;
 }
@@ -205,8 +240,15 @@
 .chosen.genre-game > .select-game-image {
   transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
   transform: translate(0px, -30px);
-  border: 8px ridge rgb(101, 41, 153);
+  border: 8px ridge rgb(136, 59, 236);
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
+}
+
+.select-game-image:hover img {
+  cursor: pointer;
 }
 
 /* .genre-game-index {
@@ -236,20 +278,47 @@ input[type="checkbox"] {
 }
 
 .select-games-form {
-  margin-top: 10vh;
+  margin-top: 7vh;
   display:flex;
   flex-direction: row;
   justify-content: space-evenly;
-    animation: fadeIn linear 1.5s;
-  -webkit-animation: fadeIn linear 1.5s;
-  -moz-animation: fadeIn linear 1.5s;
-  -o-animation: fadeIn linear 1.5s;
-  -ms-animation: fadeIn linear 1.5s;
+    animation: fadeIn linear 1.2s;
+  -webkit-animation: fadeIn linear 1.2s;
+  -moz-animation: fadeIn linear 1.2s;
+  -o-animation: fadeIn linear 1.2s;
+  -ms-animation: fadeIn linear 1.2s;
 }
 
 .submit-select-button {
-  background: rgb(231, 29, 29);
   color: white;
-  position: flex;
-  justify-content: center;
+  position: absolute;
+  left: 50%;
+  margin: 0;
+  transform: translate(-50%, 50%);
+  font-weight: 600;
+  border-style: none;
+}
+
+.submit-select-button input {
+  padding: 8px 30px;
+  border-radius: 8px;
+  border-color: transparent;
+  color: white;
+  font-size: 28px;
+  font-weight: 600;
+}
+
+#game-dart-button {
+  background-color: rgb(212, 32, 32);
+  margin-bottom: -10px;
+  transition: all 0.4s ease 0s;
+  transform: translate(-50%, 20%);
+  position: fixed;
+  box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
+}
+
+#game-dart-button:hover {
+  cursor: pointer;
+  background-color: rgb(255, 59, 59);
+  transition: all 0.4s ease 0s;
 }
