--- a/frontend/src/components/recommender/result.css
+++ b/frontend/src/components/recommender/result.css
@@ -1,3 +1,3 @@
-/* .result-show-container {
-  margin-top: 30px;
-} */
+.result-show-container {
+  background-image: url('https://i.imgur.com/eBPL6Bz.jpg');
+}
