--- a/frontend/src/components/session/signup.css
+++ b/frontend/src/components/session/signup.css
@@ -32,7 +32,13 @@
   font-weight: 600;
 }
 
+#submit-button:hover {
+  cursor: pointer;
+}
+
 #errors-section {
   margin: 0 0 20px 0;
   padding-left: 20px;
+  list-style: none;
+  font-weight: 500;
 }
