--- a/frontend/src/components/app.css
+++ b/frontend/src/components/app.css
@@ -2,6 +2,7 @@ body {
   background-color: rgb(12, 12, 12);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  background-position: bottom;
 }
 
 .page-content{
