--- a/frontend/src/components/recommender/genres_index.css
+++ b/frontend/src/components/recommender/genres_index.css
@@ -214,6 +214,10 @@
   transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
 }
 
+.genre-game img{
+  width:100%;
+}
+
 .genre-game {
   opacity: 0.6;
 }
