--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -9,6 +9,7 @@
   width: 100%;
   box-shadow: 0 1px 40px 3px rgb(14, 14, 14);
   padding-right: 20px;
+  font-family: 'Rajdhani', sans-serif;
 }
 
 .NavBar button {
@@ -24,7 +25,7 @@
   width: 100%;
   /* background-color: black; */
   transition: 0.3s;
-  font-size: 30px;
+  font-size: 24px;
 }
 
 .NavBar a:hover{
@@ -42,6 +43,7 @@
   flex-wrap: nowrap;
   justify-content: flex-start;
   transition: 0.9s;
+  border-radius: 0px 0px 8px 8px;
 }
 
 #user-menu {
