--- a/frontend/src/components/profile/profile.css
+++ b/frontend/src/components/profile/profile.css
@@ -21,5 +21,42 @@
 }
 
 .profile-box > img{
-  width: 200px;
+  position: relative;
+  bottom: 10px;
+  width: 250px;
+  height: auto;
+  border-radius: 5px;
+}
+
+.profile-box h1 {
+  position: relative;
+  bottom: 5px;
+  font-size: 35px;
+  font-family: 'Rajdhani', sans-serif;
+}
+
+.profile-box h2 {
+  position: relative;
+  bottom: 10px;
+  font-size: 18px;
+  font-weight: lighter;
+}
+
+#edit-profile-button {
+  position: relative;
+  top: 5px;
+   /* margin-top: 30px !important; */
+  padding: 8px 10px;;
+  width: 102px;
+  text-align: center;
+  border-radius: 8px;
+  background-color: rgb(230, 50, 50);
+  font-weight: 600;
+  transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
+}
+
+#edit-profile-button:hover {
+  cursor: pointer;
+  background-color: rgb(255, 59, 59);
+  transition: all 0.4s ease 0s;
 }
