--- a/frontend/src/components/session/signup.css
+++ b/frontend/src/components/session/signup.css
@@ -13,7 +13,7 @@
   box-shadow: 0 1px 40px 3px rgb(14, 14, 14);
 }
 
-.login-form input{
+.login-form input, #demo-login-button {
   background-color: rgb(44, 44, 44);
   width: 100%;
   margin: 5px 0;
@@ -22,15 +22,16 @@
   border-color: transparent;
   color: white;
 }
-
 #submit-button {
   margin-top: 30px !important;
+}
+#submit-button, #demo-login-button {
   background-color: rgb(230, 50, 50);
   font-weight: 600;
   transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
 }
 
-#submit-button:hover {
+#submit-button:hover, #demo-login-button:hover {
   cursor: pointer;
   background-color: rgb(248, 72, 72);
 }
