--- a/frontend/src/components/recommender/result.css
+++ b/frontend/src/components/recommender/result.css
@@ -6,6 +6,36 @@ body {
 
 .result-show-container {
   padding-top: 40px;
+  animation: fadeIn 1.2s;
+  -webkit-animation: fadeIn 1.2s;
+  -moz-animation: fadeIn 1.2s;
+  -o-animation: fadeIn 1.2s;
+  -ms-animation: fadeIn 1.2s;
+}
+
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
 }
 
 .add-to-playlist {
@@ -14,6 +44,7 @@ body {
   background-color: green;
   border-color: transparent;
   color: white;
+  box-shadow: 0 1px 40px 3px rgb(14, 14, 14, 0.7);
   transition: 0.2s;
 }
 
@@ -31,6 +62,7 @@ body {
   background-color: rgb(250, 162, 0);
   border-color: transparent;
   color: white;
+  box-shadow: 0 1px 40px 3px rgba(14, 14, 14, 0.7);
   transition: 0.2s;
 }
 
