--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -2,7 +2,7 @@
   position: fixed;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   background-color: rgb(61, 61, 61);
   height: 40px;
@@ -13,9 +13,15 @@
   z-index: 3;
 }
 
-.NavBar button {
-  /* height: 20px; */
+/* .NavBar button {
+  height: 20px; 
+} */
+
+#nav-logo img {
+  width: 13vw;
 }
+
+
 
 .NavBar a {
   padding: 2px 20px;
