--- a/frontend/src/components/backlog/backlog.css
+++ b/frontend/src/components/backlog/backlog.css
@@ -56,7 +56,7 @@
   text-align: center;
   transition: 0.2s;
   border: 1.5px solid;
-  background-color: black;
+  /* background-color: black; */
   flex-direction: row;
   justify-content: space-around;
   overflow: hidden;
@@ -70,7 +70,7 @@
   z-index: 0;
   margin-top: -388px;
   margin-left: -116px;
-  opacity: 0.6;
+  opacity: 0.8;
 }
 
 #no-games {
