--- a/frontend/src/components/main/main_page.css
+++ b/frontend/src/components/main/main_page.css
@@ -4,8 +4,10 @@
 }
 
 .splash-container {
-  box-shadow: inset 0 -3vw 80px 50px #000000;
-  background-image: url('https://www.howtogeek.com/wp-content/uploads/2021/03/person-holding-a-sony-playstation-5-dualsense-controller.jpeg?height=200p');
+  box-shadow: inset 0 -4vw 70px 50px #000000;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.205),rgba(0, 0, 0, 0.226)) , url('https://www.howtogeek.com/wp-content/uploads/2021/03/person-holding-a-sony-playstation-5-dualsense-controller.jpeg?height=200p');
+
+  /* background-image: url('https://www.howtogeek.com/wp-content/uploads/2021/03/person-holding-a-sony-playstation-5-dualsense-controller.jpeg?height=200p'); */
   background-size: 100%;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -14,38 +16,53 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* opacity: 0.7; */
 }
 
 .splash-container h3 {
   position: relative;
   margin-left: 14px;
-  font-size: max(20px, 2vw);
-  bottom: 19px;
+  font-size: max(50px, 2vw);
+  font-family: 'Rajdhani', sans-serif;
+  bottom: 50px;
   text-shadow: 0 0 15px rgba(0, 0, 0, 0.582);
 }
 
-.splash-container img{
+#main-logo{
   /* height: 300px; */
   height: max(450px, 2vw);
 }
 
 .splash-desc {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.541),rgba(0, 0, 0, 0.952)) , url('https://i.redd.it/f0c0nwbfxksz.jpg');
+  background-size: 100%;
+  box-shadow: inset 10px 0 90px 48px #000000;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  padding: 10vw;
+  height: 100%;
+  overflow: visible;
   position: relative;
-  top: 20px;
-  margin: 0 10vw;
+  top: 15vh;
+  /* margin: 0 10vw; */
   display: flex;
   flex-direction: column;
   text-align: center;
-  font-size: 19px;
-  margin-bottom: 100px;
+  font-size: 1.4em;
+  text-shadow: 0 0 15px rgba(0, 0, 0, 0.582);
+  border-top: solid 2px rgba(54, 54, 58, 0.87);
+  /* margin-bottom: 100px; */
 }
 
 .splash-desc h3 {
-  padding: 8px;
+  /* padding: 1px; */
   font-family: 'Rajdhani', sans-serif;
-  font-size: 34px;
+  font-size: 2em;
+  color: rgb(252, 67, 67);
+  text-shadow: 0 0 15px rgba(0, 0, 0, 0.582);
 }
 
 .splash-desc > div {
-  padding: 20px;
+  /* padding-top: 5vh; */
+  padding-bottom: 8vh;
 }
