--- a/frontend/src/components/backlog/backlog.css
+++ b/frontend/src/components/backlog/backlog.css
@@ -61,8 +61,8 @@
   justify-content: space-around;
   overflow: hidden;
   display: block;
-  outline: 1.98px solid rgb(201, 201, 201);
-  outline-offset: .5px;
+  outline: 1.5px solid rgb(255, 255, 255);
+  outline-offset: -6px;
 }
 
 .backlogGame-item img {
