--- a/frontend/src/components/recommender/genres_index.css
+++ b/frontend/src/components/recommender/genres_index.css
@@ -1,5 +1,5 @@
 .game-dart-container{
-  height: 100vh;
+  height: 100%;
   top: 0;
 }
 
@@ -253,6 +253,7 @@
 .select-game-image img {
   box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
   transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
+  overflow:visible;
 }
 
 .select-game-image:hover img {
@@ -290,12 +291,14 @@ input[type="checkbox"] {
 }
 
 .select-games-form {
-  margin-top: 0.5vh;
-  overflow: hidden;
+  margin-top: 0.2vh;
+  height: 69vh;
+  overflow-y: visible;
+  overflow-x: hidden;
   /* display:flex;
   flex-direction: row;
   justify-content: space-evenly; */
-    animation: fadeIn linear 1.2s;
+  animation: fadeIn linear 1.2s;
   -webkit-animation: fadeIn linear 1.2s;
   -moz-animation: fadeIn linear 1.2s;
   -o-animation: fadeIn linear 1.2s;
@@ -346,11 +349,11 @@ input[type="checkbox"] {
 
 #back-to-genres-button {
   cursor: pointer;
-  font-size: 1.5em;
+  font-size: 1.7em;
   color: rgba(112, 112, 112, 0.247);
   position: relative;
-  top: -5px;
-  left: -10px;
+  top: -12px;
+  left: -22px;
   transition: all 0.4s ease 0s;
 }
 
@@ -379,7 +382,7 @@ input[type="checkbox"] {
 .left-arrow {
   margin-top: 25vh;
   margin-left: 0.2vw;
-  font-size: 4vw;
+  font-size: 1.8em;
   color: rgba(128, 127, 127, 0.151);
   position: absolute;
   z-index: 1;
@@ -389,8 +392,8 @@ input[type="checkbox"] {
 
 .right-arrow {
   margin-top: 25vh;
-  margin-left: 94.8vw;
-  font-size: 4vw;
+  margin-left: 95.4vw;
+  font-size: 1.8em;
   color: rgba(128, 127, 127, 0.151);
   position: absolute;
   z-index: 1;
