--- a/frontend/src/components/recommender/result.css
+++ b/frontend/src/components/recommender/result.css
@@ -44,7 +44,7 @@ body {
   background-color: rgb(0, 167, 0);
   border-color: transparent;
   color: white;
-  box-shadow: 0 1px 40px 3px rgb(14, 14, 14, 0.7);
+  box-shadow: 1 1px 40px 3px rgb(14, 14, 14, 0.7);
   transition: 0.2s;
   width: 16vw;
 }
@@ -64,12 +64,32 @@ body {
   background-color: rgb(250, 162, 0);
   border-color: transparent;
   color: white;
-  box-shadow: 0 1px 40px 3px rgba(14, 14, 14, 0.7);
+  box-shadow: 1 1px 40px 3px rgb(14, 14, 14, 0.7);
   transition: 0.2s;
 }
 
 .visit-on-giant-bomb:hover{
   background-color: rgb(214, 129, 0);
+  cursor: pointer;
+}
+
+.new-game {
+  position: absolute;
+  text-align: center;
+  padding: 13px;
+  width: 16vw;
+  min-width: 150px;
+  margin-top: 126px;
+  background-color: rgb(13, 0, 194);
+  border-color: transparent;
+  color: white;
+  box-shadow: 1 1px 40px 3px rgb(14, 14, 14, 0.7);
+  transition: 0.2s;
+  z-index: 0;
+}
+
+.new-game:hover{
+  background-color: rgb(0, 23, 151);
   cursor: pointer;
 }
 
