--- a/frontend/src/components/session/signup.css
+++ b/frontend/src/components/session/signup.css
@@ -8,7 +8,7 @@
   padding: 10px 20px;
   border-radius: 6px;
   margin: 0 auto;
-  width: 400px;
+  width: 663px;
   background-color: rgb(61, 61, 61);
   box-shadow: 0 1px 40px 3px rgb(14, 14, 14);
 }
@@ -23,7 +23,7 @@
   color: white;
 }
 #submit-button {
-  margin-top: 30px !important;
+  margin-top: 10px !important;
 }
 #submit-button, #demo-login-button {
   background-color: rgb(230, 50, 50);
@@ -41,4 +41,7 @@
   padding-left: 20px;
   list-style: none;
   font-weight: 500;
+  position: relative;
+  top: 14px;
+  color: rgb(248, 72, 72);
 }
