--- a/frontend/src/components/recommender/genres_index.css
+++ b/frontend/src/components/recommender/genres_index.css
@@ -227,6 +227,11 @@
   opacity: 1;
 }
 
+.genre-game:hover > #view-game-page {
+  /* transform: scale(1.08); */
+  opacity: 1;
+}
+
 .chosen.genre-game {
   opacity: 1;
 }
@@ -256,7 +261,7 @@
   overflow:visible;
 }
 
-.select-game-image:hover img {
+.select-game-image:hover {
   transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
   transform: translate(0px, -30px);
   cursor: pointer;
@@ -293,8 +298,8 @@ input[type="checkbox"] {
 .select-games-form {
   margin-top: 0.2vh;
   height: 69vh;
-  overflow-y: visible;
-  overflow-x: hidden;
+  /* overflow-y: visible;
+  overflow-x: hidden; */
   /* display:flex;
   flex-direction: row;
   justify-content: space-evenly; */
@@ -330,7 +335,7 @@ input[type="checkbox"] {
   transition: all 0.4s ease 0s;
   transform: translate(-50%, 20%);
   position: absolute;
-  margin-left: 21px;
+  margin-left: 24px;
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
 }
@@ -376,6 +381,7 @@ input[type="checkbox"] {
   display: flex;
   width: max-content;
   transition: all 1.4s;
+  position: fixed;
   /* overflow:scroll;
   margin-left: auto;
   margin-right: auto; */
@@ -386,10 +392,11 @@ input[type="checkbox"] {
   margin-left: 0.7vw;
   font-size: 1.8em;
   color: rgba(128, 127, 127, 0.151);
-  position: absolute;
+  position: fixed;
   z-index: 1;
   cursor: pointer;
   transition: all 0.3s;
+  height: 100%;
 }
 
 .right-arrow {
@@ -397,10 +404,11 @@ input[type="checkbox"] {
   margin-left: 96vw;
   font-size: 1.8em;
   color: rgba(128, 127, 127, 0.151);
-  position: absolute;
+  position: fixed;
   z-index: 1;
   cursor: pointer;
   transition: all 0.3s;
+  height: 100%;
 }
 
 .left-arrow:hover {
@@ -411,3 +419,19 @@ input[type="checkbox"] {
   color: white;
 }
 
+#view-game-page {
+  position: relative;
+  bottom: 80px;
+  left: 63px;
+  /* text-align: center; */
+  /* width: 100%; */
+  font-size: 15px;
+  color: rgba(104, 103, 103, 0.007);
+  transition: 0.4s ease 0s;
+  padding: 20px;
+}
+
+#view-game-page:hover {
+  opacity: 1;
+  color: #09ff00;
+}
