Begin edits for Developer page

--- a/frontend/src/components/gitHub/plugs.css
+++ b/frontend/src/components/gitHub/plugs.css
@@ -54,7 +54,7 @@
   justify-content: space-evenly;
 }
 
-.the-gang img {
+.developer-photo {
   /* opacity: 0.75; */
   width: 20vw;
   margin: 5px;
